--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2446,6 +2446,7 @@
   "more_public_direct_channels.channels": "Channels",
   "more_public_direct_channels.direct_messages": "Direct Messages",
   "more_public_direct_channels.title": "Channels and Direct Messages",
+  "forward_message.title":"Forward Message",
   "msg_typing.areTyping": "{users} and {last} are typing...",
   "msg_typing.isTyping": "{user} is typing...",
   "multiselect.add": "Add",
@@ -2537,6 +2538,7 @@
   "post_info.pin": "Pin to channel",
   "post_info.pinned": "Pinned",
   "post_info.reply": "Reply",
+  "post_info.forward": "Forward",
   "post_info.system": "System",
   "post_info.tooltip.add_reactions": "Add Reaction",
   "post_info.unpin": "Un-pin from channel",
