--- a/i18n/zh-TW.json
+++ b/i18n/zh-TW.json
@@ -2466,6 +2466,7 @@
   "post_info.pin": "釘選至頻道",
   "post_info.pinned": "已釘選",
   "post_info.reply": "回覆",
+  "post_info.forward": "轉發",
   "post_info.system": "系統",
   "post_info.tooltip.add_reactions": "新增反應",
   "post_info.unpin": "解除釘選",
